--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -35,11 +35,52 @@
     "</p>\n",
     "</blockquote>\n",
     "<p>\n",
-    "Pairs trading algorithms have been reported to yield returns of 10%\n",
-    "or more, with a relatively market neutral portfolio. These portfolios had Sharpe ratios in excess of 1.0.\n",
+    "Pairs trading algorithms have been reported to yield portfolios with Sharpe ratios in excess of 1.0 and returns as\n",
+    "high as 10% per year.\n",
     "</p>\n",
     "<p>\n",
     "This Python notebook investigates pairs trading algorithms in an attempt reproduce the reported results.\n",
+    "</p>\n",
+    "<h3>\n",
+    "Overview\n",
+    "</h3>\n",
+    "<p>\n",
+    "Pairs trading algorithms attempt to identify pairs of stocks that have mean reverting behavior. Mean reversion takes place\n",
+    "around a common mean between the two stocks. The strategy is based on the idea that when one of the pairs is above or below\n",
+    "the mean, it will tend to revert back to the mean.\n",
+    "</p>\n",
+    "<p>\n",
+    "The stock that is above the mean is shorted, on the speculation that it's price will decrease in price as it reverts to the mean.\n",
+    "The stock that is below the mean is bought, on the speculation that it's will increase as it reverst to the mean.\n",
+    "</p>\n",
+    "<p>\n",
+    "Pairs trading is a \"market neutral\" strategy since both long a short positions are taken in related stocks.\n",
+    "</p>\n",
+    "<p>\n",
+    "Pairs trading involves two logical steps:\n",
+    "</p>\n",
+    "<ol>\n",
+    "<li>\n",
+    "<p>\n",
+    "Identify a pair of stocks that are likely to have mean reverting behavior using a lookback period.\n",
+    "</p>\n",
+    "</li>\n",
+    "<li>\n",
+    "<p>\n",
+    "Trading the stocks using the long/short strategy over the trading period.\n",
+    "</p>\n",
+    "</li>\n",
+    "</ol>\n",
+    "<h3>\n",
+    "Pairs Identification\n",
+    "</h3>\n",
+    "<p>\n",
+    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation to be a stronger identification of\n",
+    "pairs than cointegration or the Hurst exponent.\n",
+    "</p>\n",
+    "<p>\n",
+    "The problem with using correlation alone is that it will not necessarly identify stocks that mean revert. A stronger approach\n",
+    "is to use correlation as a first filter and then apply cointegration to determine whether the stocks are mean reverting.\n",
     "</p>\n",
     "<h3>\n",
     "Cointegration\n",
@@ -52,32 +93,21 @@
     "</p>\n",
     "<ul>\n",
     "<li>\n",
-    "Engle-Granger\n",
+    "Engle-Granger (linear regression apporach).\n",
     "</li>\n",
     "<li>\n",
     "Johansen\n",
     "</li>\n",
     "</ul>\n",
     "<p>\n",
-    "Most authors seem to agree that the Johansen test is the most practical for pairs trading.\n",
+    "A number perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
+    "prefers to linear regression.\n",
     "</p>\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   },
@@ -89,6 +119,17 @@
     "</h2>\n",
     "<ol>\n",
     "<li>\n",
+    "<a href=\"https://www.researchgate.net/publication/5217081_Pairs_Trading_Performance_of_a_Relative_Value_Arbitrage_Rule\">Pairs Trading: Performance of a Relative Value Arbitrage Rule</a>, February 2006\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://www.quantconnect.com/tutorials/strategy-library/intraday-dynamic-pairs-trading-using-correlation-and-cointegration-approach\">Intraday Dynamic Pairs Trading using Correlation and Cointegration</a>\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://www.sciencedirect.com/science/article/pii/S037843712100964X\">Applying Hurst Exponent in pair trading strategies\n",
+    "on Nasdaq 100 index</a>\n",
+    "by Quynh Bui and Robert Ślepaczuk\n",
+    "</li>\n",
+    "<li>\n",
     "<a href=\"https://www.sciencedirect.com/science/article/pii/S2214845021000880\">Pairs trading: is it applicable to exchange-traded funds?</a>\n",
     "</li>\n",
     "<li>\n",
@@ -96,6 +137,16 @@
     "</li>\n",
     "<li>\n",
     "<a href=\"https://www.tradelikeamachine.com/blog/cointegration-pairs-trading/part-1-using-cointegration-for-a-pairs-trading-strategy\"><i>Using Cointegration for a Pairs Trading Strategy</i> Martyn Tinsley</a>\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://letianzj.github.io/cointegration-pairs-trading.html\">Quantitative Trading and Systematic Investing by Letian Wang</a> This\n",
+    "post includes a discussion on how the results of Johansen cointegration can be interpreted.\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://robotwealth.com/practical-pairs-trading/\">Pairs Trading on the Robot Wealth blog by Kris Longmore</a>\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://pykalman.github.io/\">pykalman: the dead-simple Kalman Filter, Kalman Smoother, and EM library for Python</a>\n",
     "</li>\n",
     "</ol>"
    ],
