--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -35,8 +35,15 @@
     "</p>\n",
     "</blockquote>\n",
     "<p>\n",
-    "Pairs trading algorithms have been reported to yield portfolios with Sharpe ratios in excess of 1.0 and returns as\n",
-    "high as 10% per year.\n",
+    "Pairs trading algorithms have been reported to yield portfolios with Sharpe ratios in excess of 1.0 and returns of 10% or\n",
+    "higher. Pairs trading takes both long and short positions, so the portfolio tends to be market neutral. A pairs trading portfolio\n",
+    "can have drawdowns, but the drawdowns are much less than a benchmark like the S&P 500.\n",
+    "</p>\n",
+    "<p>\n",
+    "Markets tend toward efficiency and many quantitative approaches fade over time as they are adopted by hedge funds. Pairs trading\n",
+    "goes back to the mid-1980s. The approach still seems to be profitable. The reason for this could be that there are a vast\n",
+    "number of possible pairs and the pairs portfolio's tend to be fairly small (5 to 20 pairs, in most cases). This may always\n",
+    "leave unexploited pairs in the market.\n",
     "</p>\n",
     "<p>\n",
     "This Python notebook investigates pairs trading algorithms in an attempt reproduce the reported results.\n",
@@ -50,8 +57,8 @@
     "the mean, it will tend to revert back to the mean.\n",
     "</p>\n",
     "<p>\n",
-    "The stock that is above the mean is shorted, on the speculation that it's price will decrease in price as it reverts to the mean.\n",
-    "The stock that is below the mean is bought, on the speculation that it's will increase as it reverst to the mean.\n",
+    "The stock that is above the mean is shorted, on the speculation that it's price will decrease as it reverts toward the mean.\n",
+    "The stock below the mean is bought, on the speculation that it's will increase as it reverts toward the mean.\n",
     "</p>\n",
     "<p>\n",
     "Pairs trading is a \"market neutral\" strategy since both long a short positions are taken in related stocks.\n",
@@ -75,12 +82,14 @@
     "Pairs Identification\n",
     "</h3>\n",
     "<p>\n",
-    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation to be a stronger identification of\n",
-    "pairs than cointegration or the Hurst exponent.\n",
+    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation (on the stock prices) to be a\n",
+    "stronger identification of pairs than either cointegration or the\n",
+    "<a href=\"http://bearcave.com/misl/misl_tech/wavelets/hurst/index.html\">Hurst exponent</a>.\n",
     "</p>\n",
     "<p>\n",
-    "The problem with using correlation alone is that it will not necessarly identify stocks that mean revert. A stronger approach\n",
-    "is to use correlation as a first filter and then apply cointegration to determine whether the stocks are mean reverting.\n",
+    "The problem with using correlation alone is that stocks with high correlation may do not necessarly have mean reversion\n",
+    "behavior. A better approach is to use correlation as the first filter and then apply cointegration to determine whether\n",
+    "the stocks are mean reverting.\n",
     "</p>\n",
     "<h3>\n",
     "Cointegration\n",
@@ -89,7 +98,7 @@
     "Cointegration is used to recognize asset pairs that are canidates for pairs trading. See the reference section for discussions on cointegration.\n",
     "</p>\n",
     "<p>\n",
-    "There are two cointegration tests:\n",
+    "There are two common cointegration tests:\n",
     "</p>\n",
     "<ul>\n",
     "<li>\n",
@@ -100,9 +109,64 @@
     "</li>\n",
     "</ul>\n",
     "<p>\n",
-    "A number perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
-    "prefers to linear regression.\n",
-    "</p>\n"
+    "A number of authors perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
+    "prefers to Engle-Granger linear regression. Engle-Granger is easier to understand and is used in this notebook.\n",
+    "</p>\n",
+    "<h3>\n",
+    "Finding Paris in Stock Market Sectors\n",
+    "</h3>\n",
+    "<p>\n",
+    "In their paper on pairs trading, Quynh Bui and Robert Ślepaczuk select pairs from the NASDAQ 100 index. From the index they form over 5,000\n",
+    "pairs and evaluate each pair as a canidate for pairs trading.\n",
+    "</p>\n",
+    "<p>\n",
+    "This notebook focuses on stocks from the S&P 500 index. These stocks have a high daily trading volume, low spread and are easy to borrow\n",
+    "if the stock is selected for shorting.\n",
+    "</p>\n",
+    "<p>\n",
+    "There are 124,750 unique pairs composed of S&P 500 stocks.  This is far to large a universe of stocks to exhasutively search.\n",
+    "To reduce the search space, pairs are formed from the eleven S&P 500 sectors. Stocks in a particular sector should have similar\n",
+    "behavior and so would be good candidates for pairs.\n",
+    "</p>\n",
+    "<p>\n",
+    "The stocks, in each sector were downloaded from barchart.com and filtered. The sectors are:\n",
+    "</p>\n",
+    "<ol>\n",
+    "<li>\n",
+    "Consumer discressionary\n",
+    "</li>\n",
+    "<li>\n",
+    "Consumer staples\n",
+    "</li>\n",
+    "<li>\n",
+    "Energy\n",
+    "</li>\n",
+    "<li>\n",
+    "Financials\n",
+    "</li>\n",
+    "<li>\n",
+    "Health care\n",
+    "</li>\n",
+    "<li>\n",
+    "Industrials\n",
+    "</li>\n",
+    "<li>\n",
+    "Info tech\n",
+    "</li>\n",
+    "<li>\n",
+    "Materials\n",
+    "</li>\n",
+    "<li>\n",
+    "Real estate\n",
+    "</li>\n",
+    "<li>\n",
+    "Communication services\n",
+    "</li>\n",
+    "<li>\n",
+    "Utilities\n",
+    "</li>\n",
+    "</ol>\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -123,6 +187,9 @@
     "</li>\n",
     "<li>\n",
     "<a href=\"https://www.quantconnect.com/tutorials/strategy-library/intraday-dynamic-pairs-trading-using-correlation-and-cointegration-approach\">Intraday Dynamic Pairs Trading using Correlation and Cointegration</a>\n",
+    "</li>\n",
+    "<li>\n",
+    "<a href=\"https://bsic.it/pairs-trading-building-a-backtesting-environment-with-python/\">Pairs Trading: building a backtesting environment with Python</a>\n",
     "</li>\n",
     "<li>\n",
     "<a href=\"https://www.sciencedirect.com/science/article/pii/S037843712100964X\">Applying Hurst Exponent in pair trading strategies\n",
