Added data Added code to summarize the sector pairs.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<h2>\n",
     "Pairs Trading\n",
     "</h2>\n",
+    "<p>\n",
+    "This document is available on the GitHub repository https://github.com/IanLKaplan/pairs_trading\n",
+    "</p>\n",
     "<blockquote>\n",
     "<p>\n",
     "Pairs trading is an approach that takes advantage of the\n",
@@ -19,7 +27,7 @@
     "</p>\n",
     "</blockquote>\n",
     "<p>\n",
-    "Pairs trading is a so called statistical arbitrage trading strategy.\n",
+    "Pairs trading is a statistical arbitrage trading strategy.\n",
     "</p>\n",
     "<blockquote>\n",
     "<p>\n",
@@ -64,6 +72,9 @@
     "Pairs trading is a \"market neutral\" strategy since both long a short positions are taken in related stocks.\n",
     "</p>\n",
     "<p>\n",
+    "One of the primary references used in this notebook is the book <i>Pairs Trading</i> by Ganapathy Vidyamurthy.\n",
+    "</p>\n",
+    "<p>\n",
     "Pairs trading involves two logical steps:\n",
     "</p>\n",
     "<ol>\n",
@@ -78,58 +89,40 @@
     "</p>\n",
     "</li>\n",
     "</ol>\n",
+    "<h2>\n",
+    "Pairs Selection\n",
+    "</h2>\n",
     "<h3>\n",
-    "Pairs Identification\n",
+    "S&P 500 Industry Sectors\n",
     "</h3>\n",
     "<p>\n",
-    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation (on the stock prices) to be a\n",
-    "stronger identification of pairs than either cointegration or the\n",
-    "<a href=\"http://bearcave.com/misl/misl_tech/wavelets/hurst/index.html\">Hurst exponent</a>.\n",
+    "In choosing pairs, we want to find stocks that have similar market characteristics. Such stocks are more likely to have a\n",
+    "common mean with a relatively narrow spread. In the book <i>Pairs Trading</i> the author suggests using a factor model\n",
+    "to select stock pairs. In the book factor models and asset pricing theory (APT) are discussed, but the author does not\n",
+    "suggest which factors would be useful in pairs selection.\n",
     "</p>\n",
     "<p>\n",
-    "The problem with using correlation alone is that stocks with high correlation may do not necessarly have mean reversion\n",
-    "behavior. A better approach is to use correlation as the first filter and then apply cointegration to determine whether\n",
-    "the stocks are mean reverting.\n",
-    "</p>\n",
-    "<h3>\n",
-    "Cointegration\n",
-    "</h3>\n",
-    "<p>\n",
-    "Cointegration is used to recognize asset pairs that are canidates for pairs trading. See the reference section for discussions on cointegration.\n",
+    "Macroeconomic and microeconomic factors are used to build factor models.\n",
     "</p>\n",
     "<p>\n",
-    "There are two common cointegration tests:\n",
-    "</p>\n",
-    "<ul>\n",
-    "<li>\n",
-    "Engle-Granger (linear regression apporach).\n",
-    "</li>\n",
-    "<li>\n",
-    "Johansen\n",
-    "</li>\n",
-    "</ul>\n",
-    "<p>\n",
-    "A number of authors perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
-    "prefers to Engle-Granger linear regression. Engle-Granger is easier to understand and is used in this notebook.\n",
-    "</p>\n",
-    "<h3>\n",
-    "Finding Paris in Stock Market Sectors\n",
-    "</h3>\n",
-    "<p>\n",
-    "In their paper on pairs trading, Quynh Bui and Robert Ślepaczuk select pairs from the NASDAQ 100 index. From the index they form over 5,000\n",
-    "pairs and evaluate each pair as a canidate for pairs trading.\n",
+    "Macroeconomic factors include factors like company intrest rate exposure and economic cycles exposure (e.g., recession,\n",
+    "economic expansion).  These factors may be reasonable choices for long term investment portfolios, but are not appropriate\n",
+    "for a pairs trading portfolio which relies on short term trading.\n",
     "</p>\n",
     "<p>\n",
-    "This notebook focuses on stocks from the S&P 500 index. These stocks have a high daily trading volume, low spread and are easy to borrow\n",
-    "if the stock is selected for shorting.\n",
+    "Microeconomic factors include features like momentum, price earnings, gross profits to assets, EBITDA and other corporate factors.\n",
+    "These factors may be effective in building an investment protfolio but they are not strong indicators of market similarity.\n",
     "</p>\n",
     "<p>\n",
-    "There are 124,251 unique pairs composed of S&P 500 stocks.  This is far to large a universe of stocks to exhasutively search.\n",
-    "To reduce the search space, pairs are formed from the eleven S&P 500 sectors. Stocks in a particular sector should have similar\n",
-    "behavior and so would be good candidates for pairs.\n",
+    "In this notebook the S&P 500 industry sectors are used as an initial filter for pairs selection.  Stocks within a sector\n",
+    "are more likely to exhibit related behavior making them better canidates for pairs trading. By limiting pairs to industry\n",
+    "sectors the number of possible pairs combinations is also limited.\n",
     "</p>\n",
     "<p>\n",
-    "The stocks, in each sector were downloaded from barchart.com and filtered. The sectors are:\n",
+    "The S&P 500 stocks and their related industries were downloaded from barchart.com.  The files are included in this GitHub repository.\n",
+    "</p>\n",
+    "<p>\n",
+    "The S&P 500 sectors are:\n",
     "</p>\n",
     "<ol>\n",
     "<li>\n",
@@ -166,22 +159,209 @@
     "Utilities\n",
     "</li>\n",
     "</ol>\n",
-    "\n"
-   ],
+    "<p>\n",
+    "\n",
+    "</p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "s_and_p_file = 's_and_p_sector_components/sp_stocks.csv'\n",
+    "\n",
+    "\n",
+    "def read_stock_data(path: str) -> pd.DataFrame:\n",
+    "    s_and_p_stocks = pd.DataFrame\n",
+    "    if os.access(path, os.R_OK):\n",
+    "        s_and_p_stocks = pd.read_csv(s_and_p_file)\n",
+    "    else:\n",
+    "        print(f'Could not read file {s_and_p_file}')\n",
+    "    return s_and_p_stocks\n",
+    "\n",
+    "\n",
+    "def extract_sectors(stocks_df: pd.DataFrame) -> dict:\n",
+    "    \"\"\"\n",
+    "    Columns in the DataFrame are Symbol,Name,Sector\n",
+    "    :param stocks_df:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    sector: str = ''\n",
+    "    sector_l: list = list()\n",
+    "    stock_sectors = dict()\n",
+    "    for t, stock_info in stocks_df.iterrows():\n",
+    "        if sector != stock_info['Sector']:\n",
+    "            if len(sector_l) > 0:\n",
+    "                stock_sectors[sector] = sector_l\n",
+    "                sector_l = list()\n",
+    "            sector = stock_info['Sector']\n",
+    "        sector_l.append(stock_info['Symbol'])\n",
+    "    stock_sectors[sector] = sector_l\n",
+    "    return stock_sectors\n",
+    "\n",
+    "\n",
+    "def calc_pair_counts(sector_info: dict) -> pd.DataFrame:\n",
+    "    column_label = ['num stocks', 'num pairs']\n",
+    "    sectors = list(sector_info.keys())\n",
+    "    counts_l: list = list()\n",
+    "    n_l: list = list()\n",
+    "    for sector in sectors:\n",
+    "        n = len(sector_info[sector])\n",
+    "        n_l.append(n)\n",
+    "        count = sum(range(1, n-1))\n",
+    "        counts_l.append(count)\n",
+    "    info_df = pd.DataFrame(n_l)\n",
+    "    info_df = pd.concat([info_df, pd.DataFrame(counts_l)], axis=1)\n",
+    "    info_df.columns = column_label\n",
+    "    sum_pairs = sum(counts_l)\n",
+    "    blank_df = pd.DataFrame([' '])\n",
+    "    sum_df = pd.DataFrame([sum_pairs])\n",
+    "    row_df = pd.concat([blank_df, sum_df], axis=1)\n",
+    "    row_df.columns = column_label\n",
+    "    info_df = pd.concat([info_df, row_df], axis=0)\n",
+    "    sectors.append('Sum')\n",
+    "    info_df.index = sectors\n",
+    "    return info_df\n",
+    "\n",
+    "\n",
+    "stock_info_df = read_stock_data(s_and_p_file)\n",
+    "sectors_df = extract_sectors(stock_info_df)\n",
+    "info_df = calc_pair_counts(sectors_df)\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "<p>\n",
+    "The table below shows the number of unique pairs for each sector and the total number of pairs. By drawing pairs from sectors, rather than\n",
+    "the whole S&P 500 set of stocks, the number of possible pairs is reduced from 124,251.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒════════════════════════╤══════════════╤═════════════╕\n",
+      "│                        │ num stocks   │   num pairs │\n",
+      "╞════════════════════════╪══════════════╪═════════════╡\n",
+      "│ information-technology │ 76           │        2775 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ communication-services │ 26           │         300 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ energies               │ 21           │         190 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ utilities              │ 29           │         378 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ real-estate            │ 31           │         435 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ consumer-discretionary │ 58           │        1596 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ financials             │ 66           │        2080 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ industrials            │ 72           │        2485 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ consumer-staples       │ 33           │         496 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ materials              │ 28           │         351 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ health-care            │ 64           │        1953 │\n",
+      "├────────────────────────┼──────────────┼─────────────┤\n",
+      "│ Sum                    │              │       13039 │\n",
+      "╘════════════════════════╧══════════════╧═════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(tabulate(info_df, headers=[*info_df.columns], tablefmt='fancy_grid'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "\n",
+    "\n",
+    "<h3>\n",
+    "Linear Regression and Cointegration\n",
+    "</h3>\n",
+    "<p>\n",
+    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation (on the stock prices) to be a\n",
+    "stronger identification of pairs than either cointegration or the\n",
+    "<a href=\"http://bearcave.com/misl/misl_tech/wavelets/hurst/index.html\">Hurst exponent</a>.\n",
+    "</p>\n",
+    "<p>\n",
+    "The problem with using correlation alone is that stocks with high correlation may do not necessarly have mean reversion\n",
+    "behavior. A better approach is to use correlation as the first filter and then apply cointegration to determine whether\n",
+    "the stocks are mean reverting.\n",
+    "</p>\n",
+    "<h3>\n",
+    "Cointegration\n",
+    "</h3>\n",
+    "<p>\n",
+    "Cointegration is used to recognize asset pairs that are canidates for pairs trading. See the reference section for discussions on cointegration.\n",
+    "</p>\n",
+    "<p>\n",
+    "There are two common cointegration tests:\n",
+    "</p>\n",
+    "<ul>\n",
+    "<li>\n",
+    "Engle-Granger (linear regression apporach).\n",
+    "</li>\n",
+    "<li>\n",
+    "Johansen\n",
+    "</li>\n",
+    "</ul>\n",
+    "<p>\n",
+    "A number of authors perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
+    "prefers to Engle-Granger linear regression. Engle-Granger is easier to understand and is used in this notebook.\n",
+    "</p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "<h2>\n",
     "References\n",
     "</h2>\n",
     "<ol>\n",
+    "<li>\n",
+    "<i>Pairs Trading: Quantitative Method and Analysis</i> by Ganapathy Vidyamurthy, 2004, John Wiley and Sons\n",
+    "</li>\n",
     "<li>\n",
     "<a href=\"https://www.researchgate.net/publication/5217081_Pairs_Trading_Performance_of_a_Relative_Value_Arbitrage_Rule\">Pairs Trading: Performance of a Relative Value Arbitrage Rule</a>, February 2006\n",
     "</li>\n",
@@ -216,34 +396,28 @@
     "<a href=\"https://pykalman.github.io/\">pykalman: the dead-simple Kalman Filter, Kalman Smoother, and EM library for Python</a>\n",
     "</li>\n",
     "</ol>"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
