Added a discussion about data download.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -235,8 +235,8 @@
     "\n",
     "\n",
     "stock_info_df = read_stock_data(s_and_p_file)\n",
-    "sectors_df = extract_sectors(stock_info_df)\n",
-    "info_df = calc_pair_counts(sectors_df)\n"
+    "sectors = extract_sectors(stock_info_df)\n",
+    "info_df = calc_pair_counts(sectors)\n"
    ]
   },
   {
@@ -309,7 +309,20 @@
     }
    },
    "source": [
-    "\n",
+    "<h3>\n",
+    "Stock Market Close Data\n",
+    "</h3>\n",
+    "<p>\n",
+    "To model pairs trading this notebook requires data for all of the S&P 500 stocks from the start date to present.\n",
+    "In past models (see Stock Market Cash Trigger and ETF Rotation) the data was downloaded the first time the\n",
+    "notebook was run and stored in temporary files.  The first notebook run incurred the initial overhead of downloading\n",
+    "the data, but subsequent runs could read the data from local files.\n",
+    "</p>\n",
+    "<p>\n",
+    "The approach of downloaded the stock data every day would have a high overhead for the S&P 500 stocks. To avoid this, the\n",
+    "data will be downloaded once and stored in local files. When the notebook is run on later days, only the data between the\n",
+    "end of the previous data and the present date will be downloaded.\n",
+    "</p>\n",
     "\n",
     "<h3>\n",
     "Linear Regression and Cointegration\n",
@@ -391,9 +404,6 @@
     "</li>\n",
     "<li>\n",
     "<a href=\"https://robotwealth.com/practical-pairs-trading/\">Pairs Trading on the Robot Wealth blog by Kris Longmore</a>\n",
-    "</li>\n",
-    "<li>\n",
-    "<a href=\"https://pykalman.github.io/\">pykalman: the dead-simple Kalman Filter, Kalman Smoother, and EM library for Python</a>\n",
     "</li>\n",
     "</ol>"
    ]
