Started building a stock data class.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -51,7 +51,8 @@
     "Markets tend toward efficiency and many quantitative approaches fade over time as they are adopted by hedge funds. Pairs trading\n",
     "goes back to the mid-1980s. The approach still seems to be profitable. The reason for this could be that there are a vast\n",
     "number of possible pairs and the pairs portfolio's tend to be fairly small (5 to 20 pairs, in most cases). This may always\n",
-    "leave unexploited pairs in the market.\n",
+    "leave unexploited pairs in the market. Pairs trading may also be difficult to scale to a level that would be attractive to hedge\n",
+    "funds, so it has not been arbitraged out of the market.\n",
     "</p>\n",
     "<p>\n",
     "This Python notebook investigates pairs trading algorithms in an attempt reproduce the reported results.\n",
@@ -72,7 +73,7 @@
     "Pairs trading is a \"market neutral\" strategy since both long a short positions are taken in related stocks.\n",
     "</p>\n",
     "<p>\n",
-    "One of the primary references used in this notebook is the book <i>Pairs Trading</i> by Ganapathy Vidyamurthy.\n",
+    "One of the primary references used for this notebook is the book <i>Pairs Trading</i> by Ganapathy Vidyamurthy.\n",
     "</p>\n",
     "<p>\n",
     "Pairs trading involves two logical steps:\n",
@@ -102,21 +103,25 @@
     "suggest which factors would be useful in pairs selection.\n",
     "</p>\n",
     "<p>\n",
-    "Macroeconomic and microeconomic factors are used to build factor models.\n",
+    "The factors that are used to build factor models can generally be classified as macroeconomic and microeconomic factors.\n",
     "</p>\n",
     "<p>\n",
-    "Macroeconomic factors include factors like company intrest rate exposure and economic cycles exposure (e.g., recession,\n",
+    "Macroeconomic factors include factors like the company's interest rate exposure and economic cycles exposure (e.g., recession,\n",
     "economic expansion).  These factors may be reasonable choices for long term investment portfolios, but are not appropriate\n",
-    "for a pairs trading portfolio which relies on short term trading.\n",
+    "for a pairs trading portfolio which trades on a shorter horizon.\n",
     "</p>\n",
     "<p>\n",
     "Microeconomic factors include features like momentum, price earnings, gross profits to assets, EBITDA and other corporate factors.\n",
-    "These factors may be effective in building an investment protfolio but they are not strong indicators of market similarity.\n",
+    "These factors may be effective in building an investment protfolio but they are not necessarily strong indicators of market similarity.\n",
     "</p>\n",
     "<p>\n",
-    "In this notebook the S&P 500 industry sectors are used as an initial filter for pairs selection.  Stocks within a sector\n",
-    "are more likely to exhibit related behavior making them better canidates for pairs trading. By limiting pairs to industry\n",
-    "sectors the number of possible pairs combinations is also limited.\n",
+    "The S&P stocks are used for pairs selection because these stocks are heavily traded, with a small bid-ask spread. These stocks\n",
+    "are also easy to short.\n",
+    "</p>\n",
+    "<p>\n",
+    "In this notebook the S&P 500 industry sectors are used as an initial filter for pairs selection. Stocks within a sector are more\n",
+    "likely to exhibit related behavior making them better canidates for pairs trading. By limiting the pairs selected to an industry\n",
+    "sector, the number of possible pairs combinations is reduced.\n",
     "</p>\n",
     "<p>\n",
     "The S&P 500 stocks and their related industries were downloaded from barchart.com.  The files are included in this GitHub repository.\n",
@@ -158,10 +163,7 @@
     "<li>\n",
     "Utilities\n",
     "</li>\n",
-    "</ol>\n",
-    "<p>\n",
-    "\n",
-    "</p>\n"
+    "</ol>\n"
    ]
   },
   {
@@ -177,6 +179,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
+    "from datetime import datetime\n",
     "\n",
     "s_and_p_file = 's_and_p_sector_components/sp_stocks.csv'\n",
     "\n",
@@ -313,16 +316,49 @@
     "Stock Market Close Data\n",
     "</h3>\n",
     "<p>\n",
-    "To model pairs trading this notebook requires data for all of the S&P 500 stocks from the start date to present.\n",
-    "In past models (see Stock Market Cash Trigger and ETF Rotation) the data was downloaded the first time the\n",
+    "To model pairs trading this notebook requires data for all of the S&P 500 stocks from the start date to yesterday (e.g., one day\n",
+    "in the past). In other models (see Stock Market Cash Trigger and ETF Rotation) the stock data was downloaded the first time the\n",
     "notebook was run and stored in temporary files.  The first notebook run incurred the initial overhead of downloading\n",
     "the data, but subsequent runs could read the data from local files.\n",
     "</p>\n",
     "<p>\n",
-    "The approach of downloaded the stock data every day would have a high overhead for the S&P 500 stocks. To avoid this, the\n",
-    "data will be downloaded once and stored in local files. When the notebook is run on later days, only the data between the\n",
+    "Downloading stock data every day would have a high overhead for the S&P 500 stocks. To avoid this, the\n",
+    "data is downloaded once and stored in local files. When the notebook is run at later times, only the data between the\n",
     "end of the previous data and the present date will be downloaded.\n",
-    "</p>\n",
+    "</p>"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MarketData:\n",
+    "    def __init__(self, path: str):\n",
+    "        self.path = path\n",
+    "\n",
+    "    def read_data(self, symbol: str) -> pd.DataFrame:\n",
+    "        pass\n",
+    "\n",
+    "    def get_close_data(self, stock_list: list, start_date: datetime) -> pd.DataFrame:\n",
+    "        close_df = pd.DataFrame()\n",
+    "        for stock in stock_list:\n",
+    "            stock_df = self.read_data(stock)\n",
+    "            close_df = pd.concat([close_df, stock_df], axis=1)\n",
+    "        return close_df\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "<h3>\n",
     "Linear Regression and Cointegration\n",
@@ -358,7 +394,13 @@
     "A number of authors perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
     "prefers to Engle-Granger linear regression. Engle-Granger is easier to understand and is used in this notebook.\n",
     "</p>\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
