Added code to the MarketData class.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -180,8 +180,14 @@
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
     "from datetime import datetime\n",
+    "from typing import List\n",
+    "from pandas_datareader import data\n",
+    "from datetime import timedelta\n",
     "\n",
     "s_and_p_file = 's_and_p_sector_components/sp_stocks.csv'\n",
+    "s_and_p_data = 's_and_p_data'\n",
+    "start_date_str = '2007-01-02'\n",
+    "start_date: datetime = datetime.fromisoformat(start_date_str)\n",
     "\n",
     "\n",
     "def read_stock_data(path: str) -> pd.DataFrame:\n",
@@ -335,19 +341,55 @@
    "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "\n",
     "class MarketData:\n",
-    "    def __init__(self, path: str):\n",
+    "    def __init__(self, start_date: datetime, path: str):\n",
+    "        self.start_date = start_date\n",
     "        self.path = path\n",
+    "        self.end_date: datetime = datetime.today() - timedelta(days=1)\n",
+    "\n",
+    "    def get_market_data(symbols: List,\n",
+    "                        start_date: datetime,\n",
+    "                        end_date: datetime) -> pd.DataFrame:\n",
+    "        data_source = 'yahoo'\n",
+    "        data_col = 'Close'\n",
+    "        if type(symbols) == str:\n",
+    "            t = list()\n",
+    "            t.append(symbols)\n",
+    "            symbols = t\n",
+    "        panel_data: pd.DataFrame = data.DataReader(symbols, data_source, start_date, end_date)\n",
+    "        close_data: pd.DataFrame = panel_data[data_col]\n",
+    "        assert len(close_data) > 0, f'Error reading data for {symbols}'\n",
+    "        return close_data\n",
+    "\n",
+    "    def symbol_file_path(self, symbol: str) -> str:\n",
+    "        path: str = self.path + os.path.sep + symbol.capitalize() + '.csv'\n",
+    "        return path\n",
     "\n",
     "    def read_data(self, symbol: str) -> pd.DataFrame:\n",
-    "        pass\n",
+    "        sym_end_date: datetime = self.end_date\n",
+    "        file_path = self.symbol_file_path(symbol)\n",
+    "        if self.symbol_file_exists(file_path):\n",
+    "            symbol_df = pd.read_csv(file_path)\n",
+    "            last_row = symbol_df[:][-2:-1]\n",
+    "            pass\n",
+    "        symbol_df = self.get_market_data(symbol, self.start_date, sym_end_date)\n",
+    "        symbol_df.to_csv(file_path)\n",
+    "        return symbol_df\n",
     "\n",
-    "    def get_close_data(self, stock_list: list, start_date: datetime) -> pd.DataFrame:\n",
+    "\n",
+    "    def get_close_data(self, stock_list: list) -> pd.DataFrame:\n",
     "        close_df = pd.DataFrame()\n",
     "        for stock in stock_list:\n",
     "            stock_df = self.read_data(stock)\n",
     "            close_df = pd.concat([close_df, stock_df], axis=1)\n",
-    "        return close_df\n"
+    "        return close_df\n",
+    "\n",
+    "\n",
+    "market_data = MarketData(start_date, s_and_p_data)\n",
+    "xon_df = market_data.get_close_data(['XOM'])\n",
+    "xon_df = market_data.get_close_data(['XOM'])"
    ],
    "metadata": {
     "collapsed": false,
